<resources>
    <string name="app_name">বিয়েটা</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="search">খুঁজুন</string>
    <string name="match">মিল</string>
    <string name="fev">প্রিয়</string>
    <string name="inbox">মেসেজ</string>
    <string name="profile">প্রোফাইল</string>
    <string name="password">পাসওয়ার্ড</string>
    <string name="email">ইমেইল</string>
    <string name="login">লগইন</string>
    <string name="new_account">নতুন একাউন্ট খুলুন </string>
    <string name="title_activity_login">Login</string>
    <string name="willing_search">ইচ্ছে মত খুঁজুন </string>
    <string name="age">বয়স</string>
    <string name="height"> উচ্চতা </string>
    <string name="body">গড়ন </string>
    <string name="skin_color">গায়ের রং </string>
    <string name="education_male">  শিক্ষাগত যোগ্যতা </string>
    <string name="education">  শিক্ষা </string>
    <string name="profession_identity_male">প্রফেশনাল গ্রুপ </string>
    <string name="profession_male">পেশা</string>
    <string name="year">বছর</string>
    <string name="marital_status">বৈবাহিক অবস্থা</string>
    <string name="personal_info">"ব্যক্তিগত তথ্য"</string>
    <string name="other_question_ans_text">বিবিধ প্রশ্নের উত্তর</string>
    <string name="fast_text">রোজা রাখেন?</string>
    <string name="prayet_text">নামাজ পড়েন?</string>
    <string name="after_marrige_job_text">বিয়ের পরে চাকরি?</string>
    <string name="hijab_text">হিজাব পড়েন?</string>
    <string name="own_house_text">নিজের বাসা আছে?</string>
    <string name="profession_text">পেশা</string>
    <string name="location_text">বর্তমান অবস্থান </string>
    <string name="height_text">উচ্চতা</string>
    <string name="religion_text">ধর্ম</string>
    <string name="cast_text">বর্ণ</string>
    <string name="home_town">দেশের বাড়ি</string>
    <string name="present_loaction_text">বর্তমান অবস্থান</string>
    <string name="permanent_address_text">স্থায়ী ঠিকানা</string>
    <string name="present_address_text">বর্তমান ঠিকান</string>
    <string name="age_text">বয়স</string>
    <string name="degree_name_text">ডিগ্রীর নাম</string>
    <string name="about_me">about</string>
    <string name="area">দেশের বাড়ি</string>
    <string name="district">জেলা</string>
    <string name="country">দেশ</string>
    <string name="phone_number">ফোন নম্বর</string>
    <string name="send_smiley_message">হাসি পাঠানো হয়েছে</string>
    <string name="favorite_message">ফেভারিট করা হয়েছে</string>
    <string name="unfavorite_message">আনফেভারিট করেছেন</string>
    <string name="send_biodata_request_message"> বায়োডাটার অনুরোধ পাঠানো হয়েছে</string>
    <string name="send_communication_request_message">যোগাযোগের অনুরোধ পাঠানো হয়েছে</string>
    <string name="title_activity_send_request">Request send</string>
    <string name="sent_request"> আপনাকে পাঠানো  অনুরোধ</string>
    <string name="your_sent_request">আপনার  পাঠানো  অনুরোধ</string>
    <string name="message">মেসেজ</string>
    <string name="smile">হাসি </string>
    <string name="send_smile">হাসি পাঠান </string>
    <string name="after_send_smile_text">হাসি পাঠিয়েছেন</string>
    <string name="verification_request">ভেরিফিকেশন অনুরোধ</string>
    <string name="expire_request">মেয়াদ উত্তীর্ণ অনুরোধ</string>
    <string name="favorites">ফেভারিট</string>
    <string name="request_to_see_biodata">বায়োডাটা দেখার অনুরোধ করুন</string>
    <string name="request_to_communicate">যোগাযোগের অনুরোধ করুন</string>
    <string name="save_text">সংরক্ষণ করুন </string>
    <string name="trash">ট্র্যাশ</string>
    <string name="biodata">বায়োডাটা</string>
    <string name="connection">যোগাযোগ</string>
    <string name="blood_group_text">রক্তের গ্রুপ</string>
    <string name="smoking_text">ধূমপান</string>
    <string name="disabilities_text">প্রতিবন্ধকতা</string>
    <string name="cancel_btn_Text">প্রত্যাখ্যান করুন</string>
    <string name="accept_btn_text">গ্রহণ করুন</string>
    <string name="nav_profile">প্রোফাইল</string>
    <string name="nav_inbox">ইনবক্স</string>
    <string name="nav_fav">আপনার পছন্দ</string>
    <string name="balance_recharge">আপগ্রেড</string>
    <string name="balance_recharge_menu">আপগ্রেড করুন </string>
    <string name="payment_plan">পেমেন্ট প্ল্যান </string>
    <string name="accunt_setting">অ্যাকাউন্ট সেটিংস</string>
    <string name="nav_about_biyeta">বিয়েটা সম্পর্কে</string>
    <string name="logout">লগ আউট</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_policy">প্রাইভেসি পলিসি</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_termsofuse">টার্মস অফ ইউজ</string>
    <string name="other">অন্যান্য</string>
    <string name="professional_group_text">professional_group</string>
    <string name="occupation_text">occupation</string>
    <string name="designation_text">designation</string>
    <string name="institute_text">institute</string>
    <string name="no_internet_connection"> ইন্টারনেট সংযোগ নেই</string>
    <string name="father_text">বাবা</string>
    <string name="mother_text">মা</string>
    <string name="brother_text">ভাই</string>
    <string name="sister_text">বোন</string>
    <string name="child_text">সন্তান</string>
    <string name="no_child_text">কোন সন্তান নেই</string>
    <string name="dada">দাদা</string>
    <string name="nana">নানা</string>
    <string name="mama">মামা</string>
    <string name="khalu">খালু</string>
    <string name="kaka">চাচা</string>
    <string name="fupa">ফুপা</string>
    <string name="no_brother_text">কোন ভাই নেই</string>
    <string name="no_sister_text">কোন বোন নেই</string>
    <string name="privacy_policy_parag1">Biyeta.com is an online matrimonial portal endeavouring constantly to find your best life partner. This privacy statement is common to all the matrimonial sites operated under Biyeta.com Since we are strongly committed to your right to privacy, we have drawn out a privacy statement with regard to the information we collect from you. </string>
    <string name="privacy_policy_parag2">Payments are processed by third party gateway who use secure server for credit card transactions to protect the credit card information of our users and Cookies are used to store the login information. </string>
    <string name="privacy_policy_parag3">What information you need to give in to use this site? </string>
    <string name="privacy_policy_parag4">The information we gather from members and visitors who apply for the various services our site offers includes, but may not be limited to, email address, first name, last name, a user-specified password, mailing address, zip code and telephone number. </string>
    <string name="privacy_policy_parag5">How the site uses the information it collects/tracks? </string>
    <string name="privacy_policy_parag6">Biyeta collects information from our users primarily to ensure that we are able to fulfill your requirements and to deliver Personalised experience. </string>
    <string name="privacy_policy_parag7">With whom the site shares the information it collects/tracks? </string>
    <string name="privacy_policy_parag8">The information collected from any of our users is not shared with any individual or organisation without the former’s approval. Biyeta.com does not sell, rent, or loan any identifiable information at the individual level regarding its customers to any third party. Any information you give us is held with the utmost care and security. We are also bound to cooperate fully should a situation arise where we are required by law or legal process to provide information about a customer. </string>
    <string name="privacy_policy_parag9">Do all visitors have to pay? </string>
    <string name="privacy_policy_parag10">No. Payment is required when someone wants to send bio-data request and communication request. </string>
    <string name="privacy_policy_parag11">How to deactivate account? </string>
    <string name="privacy_policy_parag12">You can deactivate membership from account settings. </string>
    <string name="privacy_policy_parag13">Can users contact any number of profiles in a single day? </string>
    <string name="privacy_policy_parag14">After making required payment and getting permission from the other party, a user can contact any number of times. </string>
    <string name="privacy_policy_parag15">Notice </string>
    <string name="privacy_policy_parag16">We may change this Privacy Policy from time to time based on your comments or as a result of a change of policy in our company. If you have any questions regarding our Privacy Statement, please write to support@biyeta.com </string>
    <string name="about_parag1">Where we want to go?</string>
    <string name="about_parag2">Each Bangladeshi eligible bachelor should have an account in biyeta and use it as the primary source of searching the soulmate.</string>
    <string name="about_parag3">What are we doing?</string>
    <string name="about_parag4">Bring back simplicity and smart in arranged marriage.</string>
    <string name="about_parag5">Once upon a time, in the beginning days of Islam, a seeking Sahabah would enter a house with a proposal and come out married. In our good old days of village life a matchmaker would propose and an average marriage would take place within a week to a couple of months.</string>
    <string name="about_parag6">And today</string>
    <string name="about_parag7">Finding a match was never as complex, expensive and unreachable as in the modern days. Finding a soulmate in Western style entails having relationships with many people, going through trial and error cycles and ending up breaking hearts or being broken-hearted. Parents on the other hand struggle to find the right match — reach out to the friends and relatives to look: “Ah! nobody helps now-a-days”, ask for professional help: “don’t they sound shady shoddy?”; and overall isn’t the process quite embarrassing and humiliating at times?</string>
    <string name="about_parag8">If the matches are made in heaven already, why would it be so difficult to find? I mean, aren’t the rest of the things like buying food, clothing and other stuff, finding the information about anything else in the world, finding the right fit for the open position in your company and even finding the long lost friend of your school life have become a lot easier than before? </string>
    <string name="about_parag9">Then solution</string>
    <string name="about_parag10">We believe finding the right match in an affordable, simple and dignified fashion for any wannabe bride or groom is a human right. We, the people behind biyeta, strive to make that happen. Our job is never done until we bring simplicity and smartness in arranged marriages. Again.</string>
    <string name="balance_message">আপনার অ্যাকাউণ্টে পর্যাপ্ত পরিমান টাকা নেই অনুগ্রহ করে রিচার্জ করুন। </string>
    <string name="communication_rule">প্রতিটি যোগাযোগের মূল্য ১০০ টাকা। শুধুমাত্র যোগাযোগের অনুরোধ গ্রহন করলেই আপনার অ্যাকাউণ্ট থেকে টাকা নেয়া হবে। এক সপ্তাহের মধ্যে অনুরোধ গৃহীত না হলে অ্যাকাউণ্টে টাকা ফেরত আসবে। </string>
    <string name="total_send_request">সর্বমোট অনুরোধ পাঠিয়েছেনঃ </string>
    <string name="total_send_request_value">২টি </string>
    <string name="successfull_request">সফল অনুরোধঃ </string>
    <string name="successfull_request_value">১টি </string>
    <string name="pending_request_text">পেন্ডিং অনুরোধঃ </string>
    <string name="pending_request_value">১টি </string>
    <string name="money_load_button">অ্যাকাউণ্টে টাকা লোড করুন </string>
    <string name="message_verification">আপনার মোবাইলে একটি মেসেজ পাঠানো হয়েছে। মেসেজে থাকা কোডটি নিচের বাক্সে বসান।</string>
    <string name="varification_code">ভ্যারিফিকেশন কোড</string>
    <string name="code_submit_button">কোড সাবমিট করুন</string>
    <string name="code_sent_button">ভ্যারিফিকেশন কোড পাঠান</string>
    <string name="verify_mobile">আপনার মোবাইলে নাম্বার ভেরিফাই করুন </string>
</resources>