<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_inbox"
            android:title="@string/nav_inbox" />
        <item
            android:id="@+id/nav_fav"
            android:title="@string/nav_fav" />
        <item
            android:id="@+id/nav_setting"

            android:title="@string/accunt_setting" />
        <item
            android:id="@+id/nav_balance"
            android:title="@string/balance_recharge"/>
        </group>


    <item android:title="@string/other">
            <menu android:checkableBehavior="single">


                <item
                    android:id="@+id/nav_about_us"
                    android:title="@string/nav_about_biyeta" />
                <item
                    android:id="@+id/nav_connection"
                    android:title="@string/connection" />
                <item
                    android:id="@+id/nav_faq"
                    android:title="@string/nav_faq" />
                <item
                    android:id="@+id/nav_termsofuse"
                    android:title="@string/nav_termsofuse" />

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
            </menu>
    </item>





</menu>