<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

       <TextView
            android:id="@+id/privacy_policy_parag1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag1"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag2"
            android:layout_below="@id/privacy_policy_parag1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag2"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag3"
            android:layout_below="@id/privacy_policy_parag2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag3"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag4"
            android:layout_below="@id/privacy_policy_parag3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag4"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag5"
            android:layout_below="@id/privacy_policy_parag4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag5"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/parag6"
            android:layout_below="@id/privacy_policy_parag5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag6"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag7"
            android:layout_below="@id/parag6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag7"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag8"
            android:layout_below="@id/privacy_policy_parag7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag8"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag9"
            android:layout_below="@id/privacy_policy_parag8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag9"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag10"
            android:layout_below="@id/privacy_policy_parag9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag10"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag11"
            android:layout_below="@id/privacy_policy_parag10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag11"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag12"
            android:layout_below="@id/privacy_policy_parag11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag12"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag13"
            android:layout_below="@id/privacy_policy_parag12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag13"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag14"
            android:layout_below="@id/privacy_policy_parag13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag14"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag15"
            android:layout_below="@id/privacy_policy_parag14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag15"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>
        <TextView
            android:id="@+id/privacy_policy_parag16"
            android:layout_below="@id/privacy_policy_parag15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_parag16"
            android:textSize="@dimen/textSize_privacy_policy_parag"
            android:textColor="@color/privacy_policy_parag"/>

    </RelativeLayout>

</ScrollView>