<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">


         <TextView
            android:id="@+id/about_parag1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_parag1"
            android:textSize="24sp"
             android:textStyle="bold"
            android:textColor="@color/about_parag"/>

        <TextView
            android:id="@+id/about_parag2"
            android:layout_below="@id/about_parag1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_parag2"
            android:layout_marginTop="2dp"
            android:textSize="@dimen/textSize_about_parag"
            android:textColor="@color/about_parag"/>

        <!--<TextView-->
            <!--android:id="@+id/about_bullet1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/bullet_ponit_about"-->
            <!--android:textSize="@dimen/testSize_about_bullet"-->
            <!--android:textColor="@color/about_bullet"-->
            <!--android:layout_below="@id/about_parag2"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_marginLeft="@dimen/margin_about_bullet"-->
            <!--/>-->
        <TextView
            android:id="@+id/about_parag3"
            android:layout_below="@id/about_parag2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_parag3"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/about_parag"/>

        <TextView
            android:id="@+id/about_parag4"
            android:layout_below="@id/about_parag3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_parag4"
            android:layout_marginTop="2dp"
            android:textSize="@dimen/textSize_about_parag"
            android:textColor="@color/about_parag"/>

        <TextView
            android:id="@+id/about_parag5"
            android:layout_below="@id/about_parag4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_parag5"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/textSize_about_parag"
            android:textColor="@color/about_parag"/>

        <TextView
            android:id="@+id/about_parag6"
            android:layout_below="@id/about_parag5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_parag6"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/about_parag"/>

        <TextView
            android:id="@+id/about_parag7"
            android:layout_below="@id/about_parag6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_parag7"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/textSize_about_parag"
            android:textColor="@color/about_parag"/>

        <TextView
            android:id="@+id/about_parag8"
            android:layout_below="@id/about_parag7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_parag8"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/textSize_about_parag"
            android:textColor="@color/about_parag"/>
        <TextView
            android:id="@+id/about_parag9"
            android:layout_below="@id/about_parag8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_parag9"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/about_parag"/>
        <TextView
            android:id="@+id/about_parag10"
            android:layout_below="@id/about_parag9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_parag10"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/textSize_about_parag"
            android:textColor="@color/about_parag"/>

    </RelativeLayout>

</ScrollView>