<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBacground"
    >
    <TextView
        android:id="@+id/numbervarifytextView1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/verify_mobile"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/back_varify_text_view_1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <net.rimoto.intlphoneinput.IntlPhoneInput
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numbervarifytextView1"
        android:layout_alignRight="@+id/numbervarifytextView1"
        android:background="@color/back_verifycode_edittext1"
        android:layout_marginTop="15dp"
        app:textSize="14sp"
        app:textColor="#000000"
        app:flagPaddingEnd="4dp"
        app:flagPaddingStart="4dp"
        app:flagPaddingTop="4dp"
        app:flagPaddingBottom="4dp"
        android:id="@+id/my_phone_input"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/numbervarifytextView1"/>
    <TextView
        android:id="@+id/message_code_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numbervarifytextView1"
        android:layout_alignRight="@+id/numbervarifytextView1"
        android:layout_below="@+id/my_phone_input"
        android:gravity="center"
        android:text="@string/message_verification"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/verifycode_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_code_textView2"
        android:background="@color/back_verifycode_edittext1"
        android:padding="8dp"
        android:maxLines="1"
        android:hint="@string/varification_code"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/code_submit_button1"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_below="@+id/verifycode_editText"
        android:text="@string/code_submit_button"
        android:padding="10dp"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/again_varifycode_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code_submit_button1"
        android:text="@string/code_sent_button"
        android:textColor="@color/text3_font"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
